--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <title>my index page</title>
     </head>
     <body>
-        <a href="tweets.html"> index page</a>
+        <a href="tweets.html"> tweets page</a>
         <h1>HTML project</h1>
         <p> my first parametre <br> At its heart, HTML is a language made up of elements, which can be applied 
             to pieces of text to give them different meaning
