--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
+        <meta charset="utf-8">
         <title>my index page</title>
     </head>
     <body>
@@ -8,7 +9,7 @@
         <blockquote class="twitter-tweet">
             <p lang="en" dir="ltr">Just earned the Silver Badge for Sql on HackerRank! <a href="https://t.co/mT4IV0Lyjc">https://t.co/mT4IV0Lyjc</a></p>&mdash; wisdom (@wisdom38536442) 
             <a href="https://twitter.com/wisdom38536442/status/1506053392115937286?ref_src=twsrc%5Etfw">March 21, 2022</a>
-        </blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </blockquote> <script async src="https://platform.twitter.com/widgets.js" ></script>
         <h1>HTML project</h1>
         <p> my first parametre <br> At its heart, HTML is a language made up of elements, which can be applied 
             to pieces of text to give them different meaning
@@ -37,4 +38,4 @@
         <a href="https://www.linkedin.com/in/wisdom-koudama-369192229/"> <img src="home.jpg" alt="home image" style="width:200px;height:200px;"> </a>
         
     </body>
-</html>-
+</html>
