--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -43,6 +43,40 @@
 
                 </p>
             </aside>
+            <aside>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Age</th>
+                            <th>Country</th>
+                        </tr>
+                    </thead>
+                    <tbody> 
+                     
+                        <tr>
+                            <td>John</td>
+                            <td>25</td>
+                            <td>USA</td>
+                        </tr>
+                        <tr>
+                            <td>Emily</td>
+                            <td>28</td>
+                            <td>Canada</td>
+                        </tr>
+                        <tr>
+                            <td>Michael</td>
+                            <td>32</td>
+                            <td>Australia</td>
+                        </tr>
+                        <tr>
+                            <td>Sophia</td>
+                            <td>21</td>
+                            <td>UK</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </aside>
         </main>
         <footer>
             Made by KOUDAMA Hosé Wisdom <a href="https://www.instagram.com/wisdom3d/" target="_blank">my insta</a>
