--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8">
         <title>my index page</title>
     </head>
     <body>
@@ -79,7 +80,7 @@
             </aside>
         </main>
         <footer>
-            Made by KOUDAMA Hosé Wisdom <a href="https://www.instagram.com/wisdom3d/" target="_blank">my insta</a>
+            <a href="https://www.instagram.com/wisdom3d/" target="_blank">Made by KOUDAMA Hosé Wisdom </a>
         </footer>
         
     </body>
