--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -45,10 +45,71 @@
                         <p></p>
                         <p></p>
                         <p></p>
-
                     </blockquote>
                 </section>
+                <section>
+                    <h2></h2>
+                    <div>
+                        <div>
+                            <img src="", alt="">
+                            <h3></h3>
+                            <p></p>
+                            <div>
+                                <img src="", alt="">
+                                <h3></h3>
+                            </div>
+                            <div>
+                                <img src="", alt="">
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <h2></h2>
+                    <div>
+                        <div>
+                            <img src="", alt="">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <button></button>
+                </section>
+                <section>
+                    <div>
+                        <div>
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                        <div>
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                        <div>
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                </section>
             </main>
+            <footer>
+                <div>
+                    <img rc="", alt="">
+                </div>
+                <div>
+                    <img rc="", alt="">
+                    <img rc="", alt="">
+                    <img rc="", alt="">
+                </div>
+                <p></p>
+            </footer>
 
     </body>
 </html>
