--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -1,114 +1,192 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>html advanced</title>
     </head>
     <body>
             <header>
-                <a href=""><img src = "" alt="an image"></a>
+                <a href=""><img src = "/images/logo.svg" alt="an image">SmileSchool</a>
                 <div>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
+                    <a href="COURSES">COURSES</a>
+                    <a href="PRICING">PRICING</a>
+                    <a href="LOGIN">LOGIN</a>
                 </div>
             </header>
             <main>
                 <section>
-                    <h1></h1>
-                    <p></p>
-                    <button></button>
+                    <h1>Get schooled</h1>
+                    <p>SMILES</p>
+                    <p>GRIN</p>
+                    <p>LAUGH</p>
+                    <button>REGISTER FOR FREE</button>
                 </section>
                 <section>
-                    <h2></h2>
+                    <h2>Learn from the pros</h2>
                     <div>
-                        <img src="", alt="">
-                        <h3></h3>
-                        <p></p>
+                        <img src="/images/Phillip.png" alt="Phillip Massey image">
+                        <h3>Phillip Massey</h3>
+                        <p>&lsaquo;&lsaquo;Smile of the year&rsaquo;&rsaquo; 2018-2019</p>
                     </div>
                     <div>
-                        <img src="", alt="">
-                        <h3></h3>
-                        <p></p>
+                        <img src="/images/Nammie.png" alt="Nannie Lawrennce image">
+                        <h3>Nannie Lawrennce</h3>
+                        <p>Best &lsaquo;&lsaquo;little smile&rsaquo;&rsaquo; 2017</p>
                     </div>
                     <div>
-                        <img src="", alt="">
-                        <h3></h3>
-                        <p></p>
+                        <img src="/images/Bruce.png" alt="Bruce Walters image">
+                        <h3>Bruce Walters</h3>
+                        <p>Best &lsaquo;&lsaquo;Friend Smile&rsaquo;&rsaquo; live performance 2019 </p>
+                    </div>
+                    <div>
+                        <img src="/images/Henry.png" alt="Henry Hughes image">
+                        <h3>Henry Hughes</h3>
+                        <p> &lsaquo;&lsaquo;24h smiles&rsaquo;&rsaquo; winner 2016-2019 </p>
                     </div>
                 </section>
-                <section>
+                <section>       
                     <div>
-                        <img>
+                        <img src="/images/Personne.png" alt="a person">
                     </div>
                     <blockquote>
-                        <p></p>
-                        <p></p>
-                        <p></p>
+                        <p>&lsaquo;&lsaquo; Those tutorials are concise and go straight to the point. I can't thonk of a better place to learn smilling. And it's so fun!</p>
+                        <p>Person Name</p>
+                        <p>weather presenter</p>
                     </blockquote>
                 </section>
                 <section>
-                    <h2></h2>
+                    <h2>Most popular tutorials</h2>
                     <div>
                         <div>
-                            <img src="", alt="">
-                            <h3></h3>
-                            <p></p>
+                            <img src="/images/diagonal.png" alt="Diagonal Smile image">
+                            <h3>Diagonal Smile</h3>
+                            <p>Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod</p>
                             <div>
-                                <img src="", alt="">
-                                <h3></h3>
+                                <img src="/images/Phillip.png" alt="Phillip Massey image">
+                                <h3>Phillip Massey</h3>
                             </div>
                             <div>
-                                <img src="", alt="">
-                                <p></p>
+                                <img src="/" alt = " ">
+                                <p>8 min</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="/images/Sad.png" alt="Sad Smile image">
+                            <h3>Sad Smile</h3>
+                            <p>Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod</p>
+                            <div>
+                                <img src="/images/Phillip.png" alt="Phillip Massey image">
+                                <h3>Phillip Massey</h3>
+                            </div>
+                            <div>
+                                <img src="/" alt = " ">
+                                <p>8 min</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="/images/Natural.png" alt="Natural Smile image">
+                            <h3>Natural Smile</h3>
+                            <p>Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod</p>
+                            <div>
+                                <img src="/images/Phillip.png" alt="Phillip Massey image">
+                                <h3>Phillip Massey</h3>
+                            </div>
+                            <div>
+                                <img src="/" alt = " ">
+                                <p>8 min</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="/images/Happy.png" alt="Happy Smile image">
+                            <h3>Happy Smile</h3>
+                            <p>Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod</p>
+                            <div>
+                                <img src="/images/Phillip.png" alt="Phillip Massey image">
+                                <h3>Phillip Massey</h3>
+                            </div>
+                            <div>
+                                <img src="/" alt = " ">
+                                <p>8 min</p>
                             </div>
                         </div>
                     </div>
                 </section>
                 <section>
-                    <h2></h2>
+                    <h2>Free membership</h2>
                     <div>
                         <div>
-                            <img src="", alt="">
-                            <h3></h3>
-                            <p></p>
+                            <img src="/images/smile.svg" alt="smile image">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet, conset adipiscing elit.</p>
+                        </div>
+                        <div>
+                            <img src="/images/smile.svg" alt="smile image">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet, conset adipiscing elit.</p>
+                        </div>
+                        <div>
+                            <img src="/images/smile.svg" alt="smile image">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet, conset adipiscing elit.</p>
+                        </div>
+                        <div>
+                            <img src="/images/smile.svg" alt="smile image">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet, conset adipiscing elit.</p>
                         </div>
                     </div>
-                    <button></button>
+                    <button>REGISTER FOR FREE</button>
                 </section>
                 <section>
+                    <h2>F.A.Q.</h2>
                     <div>
                         <div>
-                            <h3></h3>
-                            <p></p>
+                            <h3>How does this work?</h3>
+                            <p>Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, 
+                                conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod
+                                Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, 
+                                conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod
+                            </p>
                         </div>
                         <div>
-                            <h3></h3>
-                            <p></p>
+                            <h3>How does this work?</h3>
+                            <p>Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, 
+                                conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod
+                                Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, 
+                                conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod
+                            </p>
                         </div>
                     </div>
                     <div>
                         <div>
-                            <h3></h3>
-                            <p></p>
+                            <h3>How does this work?</h3>
+                            <p>Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, 
+                                conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod
+                                Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, 
+                                conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod
+                            </p>
                         </div>
                         <div>
-                            <h3></h3>
-                            <p></p>
+                            <h3>How does this work?</h3>
+                            <p>Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, 
+                                conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod
+                                Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, 
+                                conset adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet, conset adipiscing elit, sed do eiusmod
+                            </p>
                         </div>
                     </div>
                 </section>
             </main>
             <footer>
                 <div>
-                    <img rc="", alt="">
+                    <img src="/images/smiles.svg" alt="SmileSchool">
                 </div>
                 <div>
-                    <img rc="", alt="">
-                    <img rc="", alt="">
-                    <img rc="", alt="">
+                    <a> <img src="/" alt = " "> </a>
+                    <a> <img src="/" alt = " "> </a>
+                    <a> <img src="/" alt = " "> </a>
                 </div>
-                <p></p>
+                <p>&copy; smileschool 2020</p>
             </footer>
 
     </body>
