--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -187,6 +187,7 @@
                     <a> <img src="/" alt = " "> </a>
                 </div>
                 <p>&copy; smileschool 2020</p>
+                <p>&copy; smileschool 2020</p>
             </footer>
 
     </body>
